<resources>
    <string name="app_name">inventory_management</string>

    <string name="text_email">Enter your email</string>
    <string name="text_password">Enter your Password</string>
    <string name="title">User Login</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="dont">dont have an account?</string>
    <string name="Signup"><u>Sign up</u></string>
    <string name="branch_name">Branch Name</string>
    <string name="enter_full_name">Enter Your Full Name</string>
    <string name="department_name">Department Name</string>
    <string name="enter_department_name">Enter Department Name</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Your Email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Your Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="retype_password">Retype Your Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="back_button">Back Button</string>
</resources>