<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E4E4EA">
    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
       >

        <TextView
            android:id="@+id/backbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:drawableLeft="@drawable/baseline_arrow_back_24"
            android:gravity="bottom"
            android:text="Sign Up"
            android:textColor="@color/black"
            android:textSize="24dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="679dp"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/branch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:lineSpacingExtra="2sp"
            android:text="@string/branch_name"
            android:textAppearance="@style/Email"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/branch_name"
            android:layout_width="315dp"
            android:layout_height="45dp"
            android:layout_below="@+id/branch"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/textfield"
            android:hint="Enter Your Name"
            android:padding="5dp"
            android:textAppearance="@style/text"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:lineSpacingExtra="2sp"
            android:text="@string/department_name"
            android:textAppearance="@style/Email"


            android:textSize="16dp" />

        <EditText
            android:id="@+id/dept_name"
            android:layout_width="315dp"
            android:layout_height="45dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/textfield"
            android:hint="Enter Department Name "
            android:padding="5dp"
            android:textAppearance="@style/text"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="2sp"
            android:text="@string/email"
            android:textAppearance="@style/Email"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/signup_email"
            android:layout_width="315dp"
            android:layout_height="45dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/textfield"
            android:hint="Enter Your Email"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textAppearance="@style/text"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:lineSpacingExtra="2sp"
            android:text="@string/password"
            android:textAppearance="@style/Email"

            android:textSize="16dp" />

        <EditText
            android:id="@+id/first_password"
            android:layout_width="315dp"
            android:layout_height="45dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/textfield"
            android:hint="Enter Your Password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textAppearance="@style/text"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:lineSpacingExtra="2sp"
            android:text="@string/confirm_password"
            android:textAppearance="@style/Email"

            android:textSize="16dp" />

        <EditText
            android:id="@+id/cnfrm_password"
            android:layout_width="315dp"
            android:layout_height="45dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/textfield"
            android:hint="Re-Enter Your Password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textAppearance="@style/text"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/signup_btn"
            style="@style/button"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="140dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</LinearLayout>
