<?xml version="1.0" encoding="utf-8"?>

    <!-- Auto layout, variables, and unit scale are not yet supported -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainactivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4E4EA">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/inventory_1"
            android:layout_width="207dp"
            android:layout_height="187dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="105dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="99dp"
            android:background="@drawable/login_icon" />

        <TextView
            android:id="@+id/title"
            android:layout_width="212dp"
            android:layout_height="40dp"
            android:layout_below="@+id/inventory_1"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="102dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="95dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="-17sp"
            android:text="@string/title"
            android:textAppearance="@style/title" />

        <RelativeLayout
            android:id="@+id/email_layout"
            android:layout_width="344dp"
            android:layout_height="65dp"
            android:layout_below="@+id/title"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="37dp"
            android:clipToOutline="true"
            android:padding="5dp">

            <TextView
                android:id="@+id/Email"
                android:layout_width="58dp"
                android:layout_height="28dp"
                android:fontFamily="sans-serif-medium"
                android:lineSpacingExtra="2sp"
                android:textAppearance="@style/Email"
                android:text="@string/Email"
                 />

            <RelativeLayout
                android:id="@+id/textfield"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/InputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="19dp"
                    android:background="@drawable/textfield"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:hint="@string/text_email"
                    android:lineSpacingExtra="4sp"
                    android:textAppearance="@style/text"
                    android:textColor="#000000"
                    android:textSize="16sp" />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/password_layout"
            android:layout_width="344dp"
            android:layout_height="65dp"
            android:layout_below="@+id/email_layout"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="37dp"
            android:clipToOutline="true"
            android:padding="5dp">

            <TextView
                android:id="@+id/password"
                android:layout_width="68dp"
                android:layout_height="28dp"

                android:fontFamily="sans-serif-medium"
                android:lineSpacingExtra="2sp"
                android:text="@string/Password"
                android:textAppearance="@style/Email" />

            <RelativeLayout
                android:id="@+id/textfieldpassword"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <EditText
                    android:id="@+id/InputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/textfield"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:hint="@string/text_password"
                    android:lineSpacingExtra="4sp"
                    android:password="true"
                    android:textAppearance="@style/text"
                    android:textColor="#000000"
                    android:textSize="16sp" />

            </RelativeLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/loginButton"
            style="@style/button"
            android:layout_width="336dp"
            android:layout_height="42dp"
            android:layout_below="@id/password_layout"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="39dp"
            android:fontFamily="sans-serif-medium"
            android:text="login"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/signup"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginButton"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="false"
            android:layout_centerHorizontal="false"
            android:layout_centerVertical="false"
            android:layout_marginStart="163dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="144dp"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="4sp"
            android:text="@string/Signup"
            android:textAppearance="@style/Email"
            android:translationY="-1.8sp" />

        <Button
            android:id="@+id/adminbtn"
            style="@style/button"
            android:layout_width="336dp"
            android:layout_height="42dp"
            android:layout_below="@id/signup"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="36dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="39dp"
            android:fontFamily="sans-serif-medium"
            android:text="Admin Login"
            android:textColor="#FDFCFC" />

    </RelativeLayout>

</RelativeLayout>

